--- a/English.lproj/DifferencesView.xib
+++ b/English.lproj/DifferencesView.xib
@@ -21,6 +21,7 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
+			<integer value="416"/>
 			<integer value="303"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
@@ -1812,7 +1813,7 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<object class="NSMenuItem" id="192635466">
 						<reference key="NSMenu" ref="572099067"/>
-						<string key="NSTitle">Open</string>
+						<string key="NSTitle">Open Snapshot</string>
 						<string key="NSKeyEquiv"/>
 						<int key="NSMnemonicLoc">2147483647</int>
 						<object class="NSCustomResource" key="NSOnImage" id="427382090">
@@ -2356,14 +2357,6 @@
 					<int key="connectionID">608</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBActionConnection" key="connection">
-						<string key="label">browserMenuOpenSelectedFilesInFinder:</string>
-						<reference key="source" ref="1003"/>
-						<reference key="destination" ref="192635466"/>
-					</object>
-					<int key="connectionID">609</int>
-				</object>
-				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
 						<string key="label">value: theDifferencesView.showUntrackedFilesInBrowser</string>
 						<reference key="source" ref="481174143"/>
@@ -2378,6 +2371,14 @@
 						</object>
 					</object>
 					<int key="connectionID">610</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">differencesMenuOpenSelectedFilesInFinder:</string>
+						<reference key="source" ref="1003"/>
+						<reference key="destination" ref="192635466"/>
+					</object>
+					<int key="connectionID">612</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -3592,7 +3593,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">610</int>
+			<int key="maxID">612</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -3885,6 +3886,7 @@
 							<string>browserDoubleAction:</string>
 							<string>differencesMenuAnnotateSelectedFiles:</string>
 							<string>differencesMenuNoAction:</string>
+							<string>differencesMenuOpenSelectedFilesInFinder:</string>
 							<string>mainMenuDiffAllFiles:</string>
 							<string>mainMenuDiffSelectedFiles:</string>
 							<string>mainMenuOpenSelectedFilesInFinder:</string>
@@ -3912,6 +3914,7 @@
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
+							<string>id</string>
 						</object>
 					</object>
 					<object class="NSMutableDictionary" key="actionInfosByName">
@@ -3922,6 +3925,7 @@
 							<string>browserDoubleAction:</string>
 							<string>differencesMenuAnnotateSelectedFiles:</string>
 							<string>differencesMenuNoAction:</string>
+							<string>differencesMenuOpenSelectedFilesInFinder:</string>
 							<string>mainMenuDiffAllFiles:</string>
 							<string>mainMenuDiffSelectedFiles:</string>
 							<string>mainMenuOpenSelectedFilesInFinder:</string>
@@ -3949,6 +3953,10 @@
 							</object>
 							<object class="IBActionInfo">
 								<string key="name">differencesMenuNoAction:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">differencesMenuOpenSelectedFilesInFinder:</string>
 								<string key="candidateClassName">id</string>
 							</object>
 							<object class="IBActionInfo">
@@ -4614,12 +4622,14 @@
 							<string>parentController</string>
 							<string>showBookmarks</string>
 							<string>showBranches</string>
+							<string>showClosedBranches</string>
 							<string>showOpenHeads</string>
 							<string>showTags</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>id</string>
+							<string>NSButton</string>
 							<string>NSButton</string>
 							<string>NSButton</string>
 							<string>NSButton</string>
@@ -4633,6 +4643,7 @@
 							<string>parentController</string>
 							<string>showBookmarks</string>
 							<string>showBranches</string>
+							<string>showClosedBranches</string>
 							<string>showOpenHeads</string>
 							<string>showTags</string>
 						</object>
@@ -4648,6 +4659,10 @@
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">showBranches</string>
+								<string key="candidateClassName">NSButton</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">showClosedBranches</string>
 								<string key="candidateClassName">NSButton</string>
 							</object>
 							<object class="IBToOneOutletInfo">
