--- a/English.lproj/BrowserView.xib
+++ b/English.lproj/BrowserView.xib
@@ -21,7 +21,6 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="1"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -49,7 +48,7 @@
 				<string key="NSClassName">NSApplication</string>
 			</object>
 			<object class="NSCustomView" id="453712496">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -135,7 +134,7 @@
 						</object>
 						<string key="NSPathSeparator">/</string>
 						<int key="NSMinColumnWidth">50</int>
-						<int key="NSNumberOfVisibleColumns">3</int>
+						<int key="NSNumberOfVisibleColumns">1</int>
 						<int key="NSColumnResizingType">2</int>
 						<double key="NSPreferedColumnWidth">267</double>
 						<bool key="NSAllowsTypeSelect">YES</bool>
@@ -694,14 +693,9 @@
 					</object>
 				</object>
 				<string key="NSFrameSize">{860, 606}</string>
-				<reference key="NSSuperview"/>
 				<string key="NSClassName">BrowserView</string>
 			</object>
 			<object class="NSUserDefaultsController" id="69413389">
-				<object class="NSMutableArray" key="NSDeclaredKeys">
-					<bool key="EncodedWithXMLCoder">YES</bool>
-					<string>ShowUntrackedFilesInBrowser</string>
-				</object>
 				<bool key="NSSharedInstance">YES</bool>
 			</object>
 			<object class="NSMenu" id="1040381362">
@@ -830,7 +824,7 @@
 					</object>
 					<object class="NSMenuItem" id="13902969">
 						<reference key="NSMenu" ref="1040381362"/>
-						<string key="NSTitle">Rename Selected File…</string>
+						<string key="NSTitle">Rename Selected Item…</string>
 						<string key="NSKeyEquiv"/>
 						<int key="NSMnemonicLoc">2147483647</int>
 						<reference key="NSOnImage" ref="378808984"/>
@@ -1128,14 +1122,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBActionConnection" key="connection">
-						<string key="label">mainMenuRenameSelectedFile:</string>
-						<reference key="source" ref="1003"/>
-						<reference key="destination" ref="13902969"/>
-					</object>
-					<int key="connectionID">152</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBActionConnection" key="connection">
 						<string key="label">mainMenuRemergeSelectedFiles:</string>
 						<reference key="source" ref="1003"/>
 						<reference key="destination" ref="657891265"/>
@@ -1341,6 +1327,14 @@
 						</object>
 					</object>
 					<int key="connectionID">178</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">mainMenuRenameSelectedItem:</string>
+						<reference key="source" ref="1003"/>
+						<reference key="destination" ref="13902969"/>
+					</object>
+					<int key="connectionID">179</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -2029,7 +2023,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">178</int>
+			<int key="maxID">179</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -2055,7 +2049,7 @@
 							<string>mainMenuIgnoreSelectedFiles:</string>
 							<string>mainMenuOpenSelectedFilesInFinder:</string>
 							<string>mainMenuOpenTerminalHere:</string>
-							<string>mainMenuRenameSelectedFile:</string>
+							<string>mainMenuRenameSelectedItem:</string>
 							<string>mainMenuRevealSelectedFilesInFinder:</string>
 							<string>mainMenuRevertAllFiles:</string>
 							<string>mainMenuRevertSelectedFiles:</string>
@@ -2118,7 +2112,7 @@
 							<string>mainMenuIgnoreSelectedFiles:</string>
 							<string>mainMenuOpenSelectedFilesInFinder:</string>
 							<string>mainMenuOpenTerminalHere:</string>
-							<string>mainMenuRenameSelectedFile:</string>
+							<string>mainMenuRenameSelectedItem:</string>
 							<string>mainMenuRevealSelectedFilesInFinder:</string>
 							<string>mainMenuRevertAllFiles:</string>
 							<string>mainMenuRevertSelectedFiles:</string>
@@ -2191,7 +2185,7 @@
 								<string key="candidateClassName">id</string>
 							</object>
 							<object class="IBActionInfo">
-								<string key="name">mainMenuRenameSelectedFile:</string>
+								<string key="name">mainMenuRenameSelectedItem:</string>
 								<string key="candidateClassName">id</string>
 							</object>
 							<object class="IBActionInfo">
@@ -2330,6 +2324,7 @@
 							<string>browserDoubleAction:</string>
 							<string>differencesMenuAnnotateSelectedFiles:</string>
 							<string>differencesMenuNoAction:</string>
+							<string>differencesMenuOpenSelectedFilesInFinder:</string>
 							<string>mainMenuDiffAllFiles:</string>
 							<string>mainMenuDiffSelectedFiles:</string>
 							<string>mainMenuOpenSelectedFilesInFinder:</string>
@@ -2357,6 +2352,7 @@
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
+							<string>id</string>
 						</object>
 					</object>
 					<object class="NSMutableDictionary" key="actionInfosByName">
@@ -2367,6 +2363,7 @@
 							<string>browserDoubleAction:</string>
 							<string>differencesMenuAnnotateSelectedFiles:</string>
 							<string>differencesMenuNoAction:</string>
+							<string>differencesMenuOpenSelectedFilesInFinder:</string>
 							<string>mainMenuDiffAllFiles:</string>
 							<string>mainMenuDiffSelectedFiles:</string>
 							<string>mainMenuOpenSelectedFilesInFinder:</string>
@@ -2394,6 +2391,10 @@
 							</object>
 							<object class="IBActionInfo">
 								<string key="name">differencesMenuNoAction:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">differencesMenuOpenSelectedFilesInFinder:</string>
 								<string key="candidateClassName">id</string>
 							</object>
 							<object class="IBActionInfo">
@@ -3187,11 +3188,15 @@
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
-					<string key="className">NSObject</string>
+					<string key="className">NSApplication</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="317562612">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/General/Common.h</string>
 					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<reference key="sourceIdentifier" ref="317562612"/>
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">NSTableView</string>
